latest code, quite some organized format and the  GUI almost done

--- a/Klient/app/MainWebPage/Mainpage.html
+++ b/Klient/app/MainWebPage/Mainpage.html
@@ -7,12 +7,12 @@
    <!-- <meta http-equiv="refresh" content="30"/> -->
     <title>stats</title>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src="MainpageData.js"></script>
-    <script src="Calculation.js"></script>
-    <script src="LinearCalc.js"></script>
-    <link rel="stylesheet" type="text/css" href="MainpageDesign.css">
-    <link rel="stylesheet" type="text/css" href="rangeBarDesign.css">
-    <link rel="stylesheet" type="text/css" href="droplistDesign.css">
+    <script src="script/MainpageData.js"></script>
+    <script src="script/Calculation.js"></script>
+    <script src="script/LinearCalc.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/MainpageDesign.css">
+    <link rel="stylesheet" type="text/css" href="css/rangeBarDesign.css">
+    <link rel="stylesheet" type="text/css" href="css/droplistDesign.css">
 </head>
 
 <body ng-app="app">
