--- a/Klient/app/MainWebPage/HelldiversProgressionStats.html
+++ b/Klient/app/MainWebPage/HelldiversProgressionStats.html
@@ -25,9 +25,11 @@
     </div>
 
     <div id="enemyStats">
-        <div id="logo">
-        </div>
-        {{data}}
+
+        <table id="newsfeed">
+        </table>
+        <div id="logo"></div>
+
     </div>
 
     <!-- division for menu-->
