--- a/Klient/app/MainWebPage/HelldiversProgressionStats.html
+++ b/Klient/app/MainWebPage/HelldiversProgressionStats.html
@@ -37,7 +37,11 @@
     <div id="DivPosition" >
         <!-- divion for slider -->
         <div>
-            <input style="width:500px;" type="range" id="rating" min="1" max="{{getEventSize()}}" value="{{defaultSlide()}}" step="0.01"
+            <p style="text-align: center;">
+                <label>Day: </label>
+                <output id="sliderValue"></output>
+            </p>
+            <input style="width:500px;" type="range" id="slider" min="1" max="{{getEventSize()}}" value="{{defaultSlide()}}" step="0.01"
                    onchange="angular.element(this).scope().camp();evalSlider2();" oninput="evalSlider2()"/>
         </div>
         <br/>
