latest code with play button

--- a/Klient/app/MainWebPage/index.html
+++ b/Klient/app/MainWebPage/index.html
@@ -42,8 +42,11 @@
                 <label>Day: </label>
                 <output id="sliderValue"></output>
             </p>
+            <button type="button"; onclick="angular.element(this).scope().playSlider()">Play</button>
             <input style="width:500px;" type="range" id="slider" min="{{defaultSlide()}}" max="angular.element(this).scope().setEventSize()" value="{{defaultSlide()}}" step="0.01"
                    onchange="evalSlider2();" oninput="evalSlider2();test();angular.element(this).scope().newsFeed();angular.element(this).scope().getImagePath();"/>
+            <!-- debug to stop the play button -->
+            <button type="button"; onclick="angular.element(this).scope().stopSlider()">Debug: Stop Play</button>
         </div>
         <br/>
         <!-- divion for the menu -->
