--- a/Klient/app/MainWebPage/index.html
+++ b/Klient/app/MainWebPage/index.html
@@ -58,7 +58,7 @@
             </select>
 
             <!-- För att få dropdown menyn att reagera korrekt i alla lägen, Teddy & Co -->
-            <select id="seasons"data-value="bugs" onchange="saveSeason();angular.element(this).scope().resetSlider();angular.element(this).scope().getInfoTest();angular.element(this).scope().camp();">
+            <select id="seasons"data-value="1" onchange="saveSeason();angular.element(this).scope().resetSlider();angular.element(this).scope().getInfoTest();angular.element(this).scope().camp();">
                 <option value="">Season</option>
             </select>
 
